--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
   <title>Homework 8</title>
   <link rel="icon"
     href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2 2'><circle cx='1' cy='1' r='1' fill='tomato'/></svg>">
-  <link rel="stylesheet" href="./css/common.css" />
+  <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
+
+  <ul class="gallery"></ul>
+
 
 </body>
 <script src="./js/gallery.js" defer></script>
